added network graph

--- a/src/app/auth/login.less
+++ b/src/app/auth/login.less
@@ -1,5 +1,5 @@
 #welcome-header-wrapper {
-    background: #2e7db7 url('/assets/images/banner-background.png') repeat-x top left;
+    background: #2e7db7 url('images/banner-background.png') repeat-x top left;
     color: #fff;
     margin-bottom: 20px;
     height:50px;
@@ -8,7 +8,7 @@
 #welcome-header {
     height:50px;
     padding-top:20px;
-    background: transparent url('/assets/images/twitterstats.png') no-repeat top left;
+    background: transparent url('images/twitterstats.png') no-repeat top left;
 }
 
 #login-box {
