--- a/src/app/networks/networks.less
+++ b/src/app/networks/networks.less
@@ -1,7 +1,6 @@
-.dashboard-panel-icon {
-    margin-left:2px;
-}
-
-.widget-refresh {
-    float:right;
+#container {
+    max-width: 500px;
+    height: 500px;
+    display: block;
+    margin: 0 auto;
 }
