--- a/src/app/networks/networks.tpl.html
+++ b/src/app/networks/networks.tpl.html
@@ -1,29 +1,24 @@
 
-<div class="row">
-    <div class="col-md-6"> 
-        <section class="panel panel-default">
-            <div class="panel-heading">
-                <strong>
-                    <i class="fa fa-ellipsis-v dashboard-panel-icon"></i><i class="fa fa-ellipsis-v dashboard-panel-icon"></i><i class="fa fa-ellipsis-v dashboard-panel-icon"></i>
-                    <span data-i18n="Data">Stuff</span>
-                    <i class="fa fa-refresh widget-refresh" ng-click="dashboard.updateBar()" ></i>
-                </strong>
-               
-            </div>
-            asdad
-        </section>
-    </div>
-    <div class="col-md-6">
-        <section class="panel panel-default">
-            <div class="panel-heading">
-                <strong>
-                    <i class="fa fa-ellipsis-v dashboard-panel-icon"></i><i class="fa fa-ellipsis-v dashboard-panel-icon"></i><i class="fa fa-ellipsis-v dashboard-panel-icon"></i>
-                    <span data-i18n="Data">More stuff</span>
-                    <i class="fa fa-refresh widget-refresh" ng-click="dashboard.updatePie()" ></i>
-                </strong>
-            </div>
-            adadaad
+
+<section class="panel panel-default">
+    <div class="panel-heading">
+        <strong>
+            <i class="fa fa-ellipsis-v dashboard-panel-icon"></i><i class="fa fa-ellipsis-v dashboard-panel-icon"></i><i class="fa fa-ellipsis-v dashboard-panel-icon"></i>
+            <span data-i18n="Data">Network of tweeters for #snowden</span>
             
-        </section>
+        </strong>
+
     </div>
-</div>
+    <div class="row">
+        <div class="col-md-6"> 
+            <div id="container"></div>
+
+            <sigma-graph > </sigma-graph>
+        </div>
+        <div class="col-md-6">
+
+        </div>
+    </div>
+
+</section>
+
