--- a/src/less/main.less
+++ b/src/less/main.less
@@ -117,8 +117,8 @@ h2 {
  * all the submodules and components we are using. 
  */
 
-@import '../app/layout/sb-admin.less';
-@import '../app/layout/app.less';
+
+@import '../app/layout/layout.less';
 @import '../app/auth/login.less';
 @import '../app/dashboard/dashboard.less';
-
+@import '../app/networks/networks.less';
