refactored sigma directive

--- a/src/app/networks/networks.tpl.html
+++ b/src/app/networks/networks.tpl.html
@@ -11,9 +11,9 @@
     </div>
     <div class="row">
         <div class="col-md-6"> 
-            <div id="container"></div>
+            <div id="container" ></div>
 
-            <sigma-graph > </sigma-graph>
+            <div sigma-graph graph-data="api" network-data="networks.networkData" graph-container="container"> </div>
         </div>
         <div class="col-md-6">
 
