added chart maker module

--- a/src/app/layout/side-navigation.tpl.html
+++ b/src/app/layout/side-navigation.tpl.html
@@ -24,7 +24,10 @@
 
                 <a ui-sref="home.networks"><i class="fa fa-users"></i> Networks</a></li>
             
+<li
+                class="" > 
 
+                <a ui-sref="home.charts"><i class="fa fa-bar-chart-o"></i> Chart maker</a></li>
 
         </ul>
 
