--- a/src/less/main.less
+++ b/src/less/main.less
@@ -122,3 +122,4 @@ h2 {
 @import '../app/auth/login.less';
 @import '../app/dashboard/dashboard.less';
 @import '../app/networks/networks.less';
+@import '../app/charts/charts.less';
