--- a/src/app/networks/networks.tpl.html
+++ b/src/app/networks/networks.tpl.html
@@ -16,20 +16,28 @@
             <div sigma-graph graph-data="api" network-data="networks.networkData" tweeter="networks.tweeter" graph-container="container"> </div>
         </div>
         <div class="col-md-6 detail-panel" >
-             
+
             <p>Select a node to view tweeter details</p>
             <div ng-hide="networks.tweeter.hideProfile" class="tweeter-profile profile-fadein" >
                 <div>
-                <img src="{{ networks.tweeter.profilePic}}" width="50px" height="50px "/> {{ networks.tweeter.handle }}
+                    <img src="{{ networks.tweeter.profilePic}}" width="50px" height="50px "/> {{ networks.tweeter.handle}}
                 </div>
                 <div class="tweeter-stats">
-                <strong>Tweets: </strong>{{ networks.tweeter.tweets }} 
-                <strong>Followers: </strong>{{ networks.tweeter.followers }}
-                <strong>Following: </strong>{{ networks.tweeter.following }}
+                    <div class="row">
+                        <div class="col-md-4"> 
+                            <strong>Tweets: </strong>{{ networks.tweeter.tweets}} 
+                        </div>
+                        <div class="col-md-4">
+                            <strong>Followers: </strong>{{ networks.tweeter.followers}}
+                        </div>
+                        <div class="col-md-4">
+                            <strong>Following: </strong>{{ networks.tweeter.following}}
+                        </div>
+                    </div>
                 </div>
             </div>
-                
-            
+
+
         </div>
     </div>
 
