--- a/src/app/networks/networks.tpl.html
+++ b/src/app/networks/networks.tpl.html
@@ -24,13 +24,13 @@
                 </div>
                 <div class="tweeter-stats">
                     <div class="row">
-                        <div class="col-md-4"> 
+                        <div class="col-sm-4"> 
                             <strong>Tweets: </strong>{{ networks.tweeter.tweets}} 
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-sm-4">
                             <strong>Followers: </strong>{{ networks.tweeter.followers}}
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-sm-4">
                             <strong>Following: </strong>{{ networks.tweeter.following}}
                         </div>
                     </div>
