--- a/src/less/main.less
+++ b/src/less/main.less
@@ -111,7 +111,11 @@ h2 {
   }
 }
 
+.vcenter {
 
+    vertical-align: middle;
+
+}
 /**
  * Now that all app-wide styles have been applied, we can load the styles for
  * all the submodules and components we are using. 
