--- a/src/app/charts/charts.less
+++ b/src/app/charts/charts.less
@@ -4,3 +4,17 @@
     display: block;
     margin: 0 auto;
 }
+
+.chart-data-box {
+    padding:15px;
+}
+.label-cell {
+    padding-top:7px;
+}
+
+.chart-entry-row {
+    margin-bottom:10px;
+}
+.add-item-button {
+    margin-left: 25px;
+}
