add maps module

--- a/src/app/layout/side-navigation.tpl.html
+++ b/src/app/layout/side-navigation.tpl.html
@@ -28,6 +28,10 @@
                 class="" > 
 
                 <a ui-sref="home.charts"><i class="fa fa-bar-chart-o"></i> Chart maker</a></li>
+<li
+                class="" > 
+
+                <a ui-sref="home.maps"><i class="fa fa-bar-chart-o"></i> Maps</a></li>
 
         </ul>
 
