--- a/src/less/main.less
+++ b/src/less/main.less
@@ -127,3 +127,4 @@ h2 {
 @import '../app/dashboard/dashboard.less';
 @import '../app/networks/networks.less';
 @import '../app/charts/charts.less';
+@import '../app/maps/maps.less';
